CSS Variables: Color on specific `border` properties does not work. https://bugs.webkit.org/show_bug.cgi?id=211672

Patch by Tyler Wilcock <twilco.o@protonmail.com> on 2020-06-05
Reviewed by Antti Koivisto.

Source/WebCore:

Properly mark CSSPropertyBorderBlockStart, CSSPropertyBorderBlockEnd, CSSPropertyBorderInlineStart, and CSSPropertyBorderInlineEnd as
direction-aware properties in CSSProperty::isDirectionAwareProperty.  Also reordered a few properties in this switch so it's more
alphabetically ordered.  Prior to this change, CSS variables were not able to be resolved when used in these properties.

Test: fast/borders/logical-border-props-with-variables.html

* css/CSSProperty.cpp:
(WebCore::CSSProperty::isDirectionAwareProperty):
Add CSSPropertyBorderBlockStart, CSSPropertyBorderBlockEnd, CSSPropertyBorderInlineStart, CSSPropertyBorderInlineEnd.

LayoutTests:

Add test verifying CSS variables work as values in the `border-block-start`, `border-block-end`, `border-inline-start`, and `border-inline-end` properties.

* fast/borders/logical-border-props-with-variables.html: Added.
* fast/borders/logical-border-props-with-variables-expected.html: Added.

Canonical link: https://commits.webkit.org/225633@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262627 268f45cc-cd09-0410-ab3c-d52691b4dbfc